--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Thongtin";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
     @using APPDATA.Models;
+@using System.Globalization;
     List<Bill> bill = ViewBag.viewbill;
     List<BillDetail> billct = ViewBag.viewbillct;
     List<ProductDetail> prdct = ViewBag.viewprdct;
@@ -166,7 +167,7 @@
                                             <p>@colo.Name</p>
                                         </td>
                                         <td>
-                                            <h5>@bil.Price</h5>
+                                            <h5>@bil.Price.ToString("C0", new CultureInfo("vi-VN"))</h5>
                                         </td>
 
                                     </tr>
@@ -193,7 +194,7 @@
                                                 {
                                                     <span>Mã: @vouchers.Code</span> <br></br>
                                                     <span>Giảm: @vouchers.Value%</span> <br></br>
-                                                    <span>Giảm tối đa: @vouchers.DiscountAmount VND</span>
+                                                    <span>Giảm tối đa: @vouchers.DiscountAmount.ToString("C0", new CultureInfo("vi-VN"))</span>
                                                 }
                                                 else
                                                 {
@@ -215,7 +216,7 @@
                                         <h5></h5>
                                     </td>
                                     <td>
-                                        <h5>@itembill.ShipFee</h5>
+                                        <h5>@string.Format(new CultureInfo("vi-VN"), "{0:C0}", itembill.ShipFee)</h5>
                                     </td>
                                 </tr>
                                 <tr>
@@ -304,11 +305,11 @@
                                             {
                                                 itembill.TotalMoney = (priceProd - priceXpercent) + itembill.ShipFee;
                                             }
-                                            <h5><span>@itembill.TotalMoney</span></h5>
+                                            <h5><span>@itembill.TotalMoney@string.Format(new CultureInfo("vi-VN"), "{0:C0}", itembill.TotalMoney)</span></h5>
                                         }
                                         else
                                         {
-                                            <p>@itembill.TotalMoney</p>
+                                            <p>@string.Format(new CultureInfo("vi-VN"), "{0:C0}", itembill.TotalMoney)</p>
                                         }
                                     </td>
                                 </tr>
