--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -373,7 +373,7 @@
 
         });
     </script>
-
+    @await Component.InvokeAsync("Notyf")
     @RenderSection("scripts", false)
 </body>
 </html>
